🔨 chore: clean up some minor stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="checkbox">
         <h4>Pay Bills Again</h4>
         <input id="edit-input" type="text" value="Pay Bills Again">
-        <button class="edit" onclick="editButtonHandler">Edit</button>
+        <button class="edit">Edit</button>
         <button class="delete">Delete</button>
       </li>
     </ul>
@@ -40,7 +40,7 @@
         <input type="checkbox" checked>
         <h4>Pay Bills</h4>
         <input id="edit-input" type="text" value="Pay Bills">
-        <button class="edit" onclick="editButtonHandler">Edit</button>
+        <button class="edit">Edit</button>
         <button class="delete">Delete</button>
       </li>
     </ul>
