--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="delete">Delete</button>
       </li>
 
-      <li class="view-mode">
+      <li class="edit-mode">
         <input type="checkbox">
         <h4>Pay Bills Again</h4>
         <input id="edit-input" type="text" value="Pay Bills Again">
